# HolsteinGenerator

./: .gitignore  CMakeLists.txt  HolsteinDecay.cpp  HolsteinDecay.hh  HolsteinVars.cpp  HolsteinVars.hh  IsotopeValues.hh  K37SublevelPopulations.cc  K37SublevelPopulations.hh  K_37_INPUT.txt  K_37_POPULATIONS_INPUT.txt  SplitString.hh  TheHolstein.cpp  holsteinview.cpp  holsteinview_old.cpp  roc_compare.cpp
include/: Holstein52Generator.hh  Holstein52Isotope.hh  HolsteinDecay.hh  HolsteinVars.hh  IsotopeValues.hh  K37AtomicSetup.hh  K37Cloud.hh  K37ComplexGammaFunction.hh  K37Config.hh  K37Config.hh.in  K37FermiFunction.hh  K37MiniaturePGA.hh  K37SublevelPopulations.hh  MiniAggregator.hh  SplitString.hh
src/: CMakeLists.txt  Holstein52Generator.cc  Holstein52Isotope.cc  HolsteinDecay.cpp  HolsteinVars.cpp  IsotopeValues.cc  K37AtomicSetup.cc  K37Cloud.cc  K37ComplexGammaFunction.cc  K37FermiFunction.cc  K37MiniaturePGA.cc  K37SublevelPopulations.cc  MiniAggregator.cc
